--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,8 @@ dependencies = [
     "uvicorn>=0.32.1",
     "fastembed>=0.4.2",
     "llama-index-embeddings-fastembed>=0.3.0",
+    "websocket>=0.2.1",
+    "selenium>=4.27.1",
+    "feedparser>=6.0.11",
+    "spellchecker>=0.4",
 ]
